--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -7,8 +7,9 @@
 @use '../core/helpers/internal' as *;
 @use 'tokens' as *;
 
-/* The Color scheme specific CSS variables can be
-  access as: var(--c-surface-1). */
+// The Color scheme specific CSS variables can be
+// access as: var(--c-surface-1) or by using the
+// color function: color(surface, 1).
 
 $color-schemes: (
   light: (
