--- a/scss/theme/_index.scss
+++ b/scss/theme/_index.scss
@@ -2,7 +2,10 @@
 //   Theme
 // --------------------------------
 
-@use 'sass:map';
-
 @forward 'theme';
-@forward 'tokens';
+
+@use 'theme' as *;
+
+@mixin theme {
+  @include create-themes();
+}
