--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -34,8 +34,8 @@ $utility-classes: (
     place-content: center;
   }
 
-  /* Heap: Stacked elements
-  Credits: https://smolcss.dev/#smol-stack-layout */
+  // Heap: Stacked elements
+  // Credits: https://smolcss.dev/#smol-stack-layout
   @include create-responsive-utility(heap) {
     display: grid;
     grid-template-areas: 'stack';
@@ -110,6 +110,4 @@ $utility-classes: (
       margin-top: 0;
     }
   }
-
-  // TODO: Container?
 }
