--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -9,6 +9,7 @@ $config: (
   default-color-scheme: light,
   base-font-size: 16,
   spacer: 1rem,
+  important-utilities: false,
   utility-glue: ':',
   responsive: (
     padding: (
