--- a/scss/koi-styles.scss
+++ b/scss/koi-styles.scss
@@ -1,7 +1,4 @@
-@use 'theme' as *;
-@use 'base' as *;
-@use 'components' as *;
-@use 'utilities' as *;
+@use 'koi' as *;
 
 @include theme();
 @include base();
