--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,6 +1,8 @@
 @use 'layout';
+@use 'spacing';
 @use 'visibility';
 
 @mixin utilities {
   @include layout.utilities();
+  @include visibility.utilities();
 }
