--- a/scss/theme/tokens/_size.scss
+++ b/scss/theme/tokens/_size.scss
@@ -11,6 +11,7 @@ $spacer: map.get($config, spacer);
 
 // Base spacing system
 $-spacing-scale: (
+  0: 0,
   1: rem(1),
   2: rem(2),
   4: rem(4),
