--- a/scss/theme/tokens/_index.scss
+++ b/scss/theme/tokens/_index.scss
@@ -12,7 +12,7 @@
 @use 'opacity' as *;
 @use 'screens' as *;
 @use 'shadow' as *;
-@use 'size' as *;
+@use 'spacing' as *;
 @use 'timing' as *;
 @use 'typography' as *;
 
