--- a/scss/theme/tokens/_spacing.scss
+++ b/scss/theme/tokens/_spacing.scss
@@ -10,7 +10,7 @@
 $spacer: map.get($config, spacer);
 
 // Base spacing system
-$-spacing-scale: (
+$spacing-scale: (
   0: 0,
   1: rem(1),
   2: rem(2),
@@ -47,11 +47,11 @@ $-spacing-scale: (
   384: rem(384),
   448: rem(448),
   512: rem(512),
-);
+) !default;
 
 // Spacing (marging, padding)
 $spacing: map.merge(
-  $-spacing-scale,
+  $spacing-scale,
   (
     2xs: $spacer * 0.125,
     xs: $spacer * 0.25,
@@ -67,7 +67,7 @@ $spacing: map.merge(
 
 // Sizes (width, height...)
 $sizes: map.merge(
-  $-spacing-scale,
+  $spacing-scale,
   (
     '1/2': 50%,
     '1/3': 33.333333%,
@@ -99,10 +99,5 @@ $sizes: map.merge(
     third: 33.333333%,
     half: 50%,
     full: 100%,
-    screen: 100vw,
-    min: min-content,
-    max: max-content,
-    fit: fit-content,
-    auto: auto,
   )
 ) !default;
