--- a/scss/utilities/_effects.scss
+++ b/scss/utilities/_effects.scss
@@ -1,6 +1,6 @@
-// --------------------------------
-//   Shadow Utilities
-// --------------------------------
+// ------------------------------------------------
+//   Effects Utilities (Box Shadow, Opacity, ...)
+// ------------------------------------------------
 
 @use '../core/generators' as *;
 @use '../core' as *;
