--- a/scss/utilities/_support.scss
+++ b/scss/utilities/_support.scss
@@ -7,34 +7,34 @@
 
 @use '../core' as *;
 
-$-default-shade: config(fallbacks, colors);
+$default-shade: config(fallbacks, colors);
 
 // Flatten theme colors for utility generation
-$utility-colors-map: ();
+$utility-bg-colors-map: ();
 @each $color, $shades-or-value in theme(colors) {
   // Simple colors
   @if meta.type-of($shades-or-value) == 'color' {
-    $utility-colors-map: map.merge(
-      $utility-colors-map,
+    $utility-bg-colors-map: map.merge(
+      $utility-bg-colors-map,
       (
-        '#{$color}': $shades-or-value,
+        '#{$color}': rgba($shades-or-value, var(--koi-bg-opacity)),
       )
     );
   } @else {
     // Color shades
     @each $color-shade, $value in $shades-or-value {
-      $utility-colors-map: map.merge(
-        $utility-colors-map,
+      $utility-bg-colors-map: map.merge(
+        $utility-bg-colors-map,
         (
-          '#{$color}-#{$color-shade}': $value,
+          '#{$color}-#{$color-shade}': rgba($value, var(--koi-bg-opacity)),
         )
       );
       // Alias default color shade
-      @if $color-shade == $-default-shade {
-        $utility-colors-map: map.merge(
-          $utility-colors-map,
+      @if $color-shade == $default-shade {
+        $utility-bg-colors-map: map.merge(
+          $utility-bg-colors-map,
           (
-            '#{$color}': $value,
+            '#{$color}': rgba($value, var(--koi-bg-opacity)),
           )
         );
       }
