--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -35,3 +35,12 @@ h1 {
     border-color: koi.accent(5);
   }
 }
+
+.stacker {
+  @include koi.margin-top(lg);
+  @include koi.stack(column);
+
+  @include koi.mq(md) {
+    @include koi.stack(row);
+  }
+}
