--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,6 +7,7 @@
 @use 'default';
 @use 'animation';
 @use 'color';
+@use 'delay';
 @use 'duration';
 @use 'media';
 @use 'shadow';
@@ -25,6 +26,7 @@
 
   @include animation.vars;
   @include color.vars;
+  @include delay.vars;
   @include duration.vars;
   @include shadow.vars;
   @include timing.vars;
