--- a/scss/theme/tokens/_index.scss
+++ b/scss/theme/tokens/_index.scss
@@ -6,6 +6,7 @@
 @use 'blur' as *;
 @use 'border' as *;
 @use 'colors' as *;
+@use 'delay' as *;
 @use 'duration' as *;
 @use 'keyframes' as *;
 @use 'layer' as *;
@@ -21,6 +22,7 @@ $tokens: (
   blur: $blur,
   radius: $radius,
   colors: $colors,
+  delay: $delay,
   gradients: $gradients,
   duration: $duration,
   keyframes: $keyframes,
