--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -2,10 +2,83 @@
 //   Border Utilities
 // --------------------------------
 
+@use 'sass:map';
+
 @use '../core/generators' as *;
 @use '../core' as *;
+@use 'support';
 
-$utility-classes: ();
+$utility-classes: (
+  'rounded': (
+    property: border-radius,
+    class: rounded,
+    default: config(fallbacks, radius),
+    values: theme(radius),
+  ),
+  'rounded-top': (
+    property: border-top-left-radius border-top-right-radius,
+    class: rounded-t,
+    values: theme(radius),
+  ),
+  'rounded-right': (
+    property: border-top-right-radius border-bottom-right-radius,
+    class: rounded-r,
+    values: theme(radius),
+  ),
+  'rounded-bottom': (
+    property: border-bottom-right-radius border-bottom-left-radius,
+    class: rounded-b,
+    values: theme(radius),
+  ),
+  'rounded-left': (
+    property: border-bottom-left-radius border-top-left-radius,
+    class: rounded-l,
+    values: theme(radius),
+  ),
+  'border-color': (
+    property: border-color,
+    class: border,
+    state: hover focus,
+    local-vars: (
+      'border-opacity': 1,
+    ),
+    values:
+      map.merge(
+        (
+          current: currentColor,
+          inherit: inherit,
+          transparent: transparent,
+        ),
+        support.$utility-border-colors-map
+      ),
+  ),
+  'border-width': (
+    property: border-width,
+    class: border,
+    state: hover focus,
+    default: config(fallbacks, border-width),
+    values: (
+      0: 0px,
+      1: 1px,
+      2: 2px,
+      4: 4px,
+      8: 8px,
+    ),
+  ),
+  'border-style': (
+    property: border-style,
+    class: border,
+    state: hover focus,
+    values: (
+      solid: solid,
+      dashed: dashed,
+      dotted: dotted,
+      double: double,
+      hidden: hidden,
+      none: none,
+    ),
+  ),
+);
 
 @mixin utilities {
   @include generate-utilities($utility-classes);
