--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -2,6 +2,10 @@
 //   Layout Utilities
 // --------------------------------
 
+@use 'sass:map';
+@use 'sass:list';
+
+@use '../theme/tokens/spacing' as *;
 @use '../core/generators' as *;
 @use '../core' as *;
 
@@ -116,69 +120,30 @@ $utility-classes: (
     }
   }
 
-  @include create-responsive-utility(stack-x) {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+  $-spacers: list.append(map.keys($spacers), 0);
+  @each $key in $-spacers {
+    $spacer-value: if(theme-has-key(spacing, $key), spacing($key), $key);
 
-    & > * {
-      margin-bottom: 0;
-      margin-top: 0;
+    @include create-responsive-utility(space-x-#{$key}) {
+      & > :not([hidden]) ~ :not([hidden]) {
+        margin-right: calc($spacer-value * var(--koi-space-x-reverse, 0));
+        margin-left: calc($spacer-value * calc(1 - var(--koi-space-x-reverse, 0)));
+      }
     }
 
-    & > * + * {
-      margin-left: var(--koi-spacer, spacing(md));
-      margin-right: 0;
-    }
-  }
-
-  @include create-responsive-utility(stack-x-reverse) {
-    align-items: center;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-
-    & > * {
-      margin-bottom: 0;
-      margin-top: 0;
-    }
-
-    & > * + * {
-      margin-left: 0;
-      margin-right: var(--koi-spacer, spacing(md));
+    @include create-responsive-utility(space-y-#{$key}) {
+      & > :not([hidden]) ~ :not([hidden]) {
+        margin-top: calc($spacer-value * calc(1 - var(--koi-space-y-reverse, 0)));
+        margin-bottom: calc($spacer-value * var(--koi-space-y-reverse, 0));
+      }
     }
   }
 
-  @include create-responsive-utility(stack-y) {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    & > * {
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    & > * + * {
-      margin-bottom: 0;
-      margin-top: var(--koi-spacer, spacing(md));
-    }
+  @include create-responsive-utility(space-x-reverse) {
+    --koi-space-x-reverse: 1;
   }
 
-  @include create-responsive-utility(stack-y-reverse) {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-start;
-
-    & > * {
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    & > * + * {
-      margin-bottom: var(--koi-spacer, spacing(md));
-      margin-top: 0;
-    }
+  @include create-responsive-utility(space-y-reverse) {
+    --koi-space-y-reverse: 1;
   }
 }
