--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -26,6 +26,30 @@ $utility-classes: (
         support.$utility-text-colors-map
       ),
   ),
+  'font-style': (
+    property: font-style,
+    class: null,
+    values: (
+      italic: italic,
+      not-italic: normal,
+    ),
+  ),
+  'font-weight': (
+    property: font-weight,
+    class: font,
+    values: theme(font-weight),
+  ),
+  'line-height': (
+    property: line-height,
+    class: leading,
+    responsive: true,
+    values: theme(leading),
+  ),
+  'letter-spacing': (
+    property: letter-spacing,
+    class: tracking,
+    values: theme(tracking),
+  ),
   'text-align': (
     property: text-align,
     class: text,
@@ -36,4 +60,12 @@ $utility-classes: (
 
 @mixin utilities {
   @include generate-utilities($utility-classes);
+
+  // Text size: (font-size with corresponding line-height)
+  $-font-sizes: map.keys(theme(font-size));
+  @each $key in $-font-sizes {
+    @include create-responsive-utility(text-#{$key}) {
+      @include text-size($key);
+    }
+  }
 }
